# DownOnSpot

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
assets/: free_librespot_private_key
src/: arg.rs  args.rs  audio_format.rs  convert.rs  converter.rs  download.rs  downloader.rs  error.rs  main.rs  parse.rs  settings.rs  spotify.rs
src/tag/: id3.rs  mod.rs  ogg.rs
