cargo-features = ["strip"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package]
name = "down_on_spot"
version = "0.2.0"
edition = "2018"
authors = ["exttex", "oSumAtrIX"]
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
clap = { version = "3.0.10", features = ["cargo"] }
log = "0.4"
url = "2.2"
protobuf = "2.25"
id3 = "1.0"
dirs = "4.0"
chrono = "0.4"
lewton = "0.10"
futures = "0.3"
reqwest = "0.11"
colored = "2"
lame = "0.1"
aspotify = "0.7"
#librespot = { git = "ssh://git@github.com/oSumAtrIX/free-librespot.git", branch = "dev" }
librespot = "0.3.1"
async-std = { version = "1.10", features = ["attributes", "tokio1"] }
serde_json = "1.0"
async-stream = "0.3"
oggvorbismeta = "0.1"
sanitize-filename = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.12", features = ["fs"] }

[package.metadata.winres]
OriginalFilename = "DownOnSpot.exe"
FileDescription = "Download songs from Spotify with Rust"
ProductName = "DownOnSpot"
ProductVersion = "0.2.0"
