[package]
name = "down_on_spot"
version = "1.0.0"
edition = "2021"
authors = ["oSumAtrIX", "exttex"]
build = "build.rs"

[dependencies]
simple_logger = { version = "4.2.0", default_features = false, features = [
	"colors",
] }
librespot = "0.4.2"
rspotify = "0.11.7"
clap = { version = "4.3.19", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.13.0" }
log = "0.4.19"
async-stream = "0.3"
url = "2.4.0"
futures = "0.3.28"
lewton = "0.10.2"
lame = "0.1.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
